<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <EditText android:id="@+id/date_fuelled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/date_fuelled"/>
    <EditText android:id="@+id/station"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/station"/>
    <EditText android:id="@+id/odometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/odometer"/>
    <EditText android:id="@+id/fuel_grade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/fuel_grade"/>
    <EditText android:id="@+id/fuel_amt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/fuel_amt"/>
    <EditText android:id="@+id/fuel_unit_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/fuel_unit_cost"/>
    <Button android:id="@+id/submit_edit"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/submit_edit"/>
    <Button android:id="@+id/cancel"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/cancel"/>
</LinearLayout>



